--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "ftb-server",
+  "name": "hotel-sea-shore-server",
   "version": "1.0.0",
   "description": "Server for Archilawn project",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js"
@@ -32,6 +32,6 @@
     "nodemon": "^2.0.22"
   },
   "engines": {
-    "node": ">=14.x"
+    "node": "18.x"
   }
 }
